--- a/_config.yml
+++ b/_config.yml
@@ -22,9 +22,9 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Qiong Liu（刘琼）"
-  avatar           : "images/android-chrome-512x512.png"
+  avatar           : "images/liuqiong.png"
   bio              : "Lorem ipsum College"
-  location         : "Beijing, China"
+  location         : "Wuhan, China"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"
