--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Rui Zhou (周锐)"
-  avatar           : "images/liuqiong.png"
+  avatar           : "images/zhourui.jpg"
   bio              : "School of Electronic Information and Communications, Huazhong University of Science and Technology"
   location         : "Wuhan, China"
   employer         :
