--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Rui Zhou (周锐)"
   avatar           : "images/zhourui.jpg"
-  bio              : "Huazhong University of Science and Technology<br><br>PhD Student"
+  bio              : "Huazhong University of Science and Technology<br><br>Ph.D. Student"
   location         : "Wuhan, China"
   employer         :
   pubmed           : 
